#///////////////////////////////////////////////////////////////////////////////
#
#  Copyright (c) 2010, Michael A. Jackson. BlueQuartz Software
#  All rights reserved.
#  BSD License: http://www.opensource.org/licenses/bsd-license.html
#
#///////////////////////////////////////////////////////////////////////////////
# set project's name
PROJECT( QEMMPM )
cmake_minimum_required(VERSION 2.6)


# ---------- Setup output Directories -------------------------
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all Libraries"
  )

# --------- Setup the Executable output Directory -------------
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all Executables."
  )

# --------- Setup the Executable output Directory -------------
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all static libraries."
  )

include ( ${PROJECT_RESOURCES_DIR}/CMake/CMakeMacros.cmake)

# Set the GUI type for different platforms
SET(GUI_TYPE )

# Set some Win32 Specific Settings
IF(WIN32)
 SET(GUI_TYPE WIN32)
ENDIF(WIN32)

# Set some include directories
include_directories( ${EMMPMGUI_SOURCE_DIR}/Source )
include_directories( ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt )
include_directories( ${QEMMPM_BINARY_DIR} )


# List the source files here
SET (QEMMPM_SRCS
    ${QEMMPM_SOURCE_DIR}/main.cpp
    ${QEMMPM_SOURCE_DIR}/QEmMpm.cpp
    ${QEMMPM_SOURCE_DIR}/EmMpmTask.cpp
    ${QEMMPM_SOURCE_DIR}/EmMpmThread.cpp
    ${QEMMPM_SOURCE_DIR}/ProcessQueueDialog.cpp
    ${QEMMPM_SOURCE_DIR}/ProcessQueueController.cpp
)

SET (QEMMPM_HDRS
    ${QEMMPM_SOURCE_DIR}/QEmMpm.h
    ${QEMMPM_SOURCE_DIR}/EmMpmTask.h
    ${QEMMPM_SOURCE_DIR}/EmMpmThread.h
    ${QEMMPM_SOURCE_DIR}/ProcessQueueDialog.h
    ${QEMMPM_SOURCE_DIR}/ProcessQueueController.h
)
IDE_SOURCE_PROPERTIES( "EMMPM/GUI" "${QEMMPM_HDRS}" "${QEMMPM_SRCS}")

set (EMMPM_COMMON_QT_SRCS
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/AboutBox.cpp
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/QRecentFileList.cpp
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/QFileCompleter.cpp
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/AIMImageGraphicsDelegate.cpp
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/QFSDroppableGraphicsView.cpp
)
set (EMMPM_COMMON_QT_HDRS
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/AboutBox.h
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/QRecentFileList.h
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/QFileCompleter.h
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/AIMImageGraphicsDelegate.h
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/QFSDroppableGraphicsView.h
)
IDE_SOURCE_PROPERTIES("EMMPM/Common/Qt" "${EMMPM_COMMON_QT_HDRS}" "${EMMPM_COMMON_QT_SRCS}")

set (EMMPM_COMMON_SRCS
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/AIMImage.cpp
)
set (EMMPM_COMMON_HDRS
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/AIMArray.hpp
    ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/AIMImage.h   )
IDE_SOURCE_PROPERTIES("EMMPM/Common" "${EMMPM_COMMON_HDRS}" "${EMMPM_COMMON_SRCS}")


# --------------------------------------------------------------------
#  Get a list of the header to run 'moc' on 
# --------------------------------------------------------------------                   
SET( QEMMPM_MOC_HDRS
    ${QEMMPM_HDRS}
    ${EMMPM_COMMON_QT_HDRS}
)

# --------------------------------------------------------------------
# The UI files As generated by Qt Designer
# --------------------------------------------------------------------
SET( QEMMPM_UIS
  ${QEMMPM_SOURCE_DIR}/UI_Files/QEmMpm.ui
  ${QEMMPM_SOURCE_DIR}/UI_Files/ProcessQueueDialog.ui
  ${EMMPMGUI_SOURCE_DIR}/Source/EMMPM/Common/Qt/UI_Files/AboutBox.ui
)

# and finally any resource files
SET( QEMMPM_RCS ${PROJECT_RESOURCES_DIR}/icons/images/Icons.qrc)

# --------------------------------------------------------------------
# Run MOC on the files   
QT4_ADD_RESOURCES( Generated_RC_SRCS ${QEMMPM_RCS} )

# --------------------------------------------------------------------
# this will run uic on .ui files:
QT4_WRAP_UI( Generated_UI_HDRS ${QEMMPM_UIS} )

# --------------------------------------------------------------------
# and finally this will run moc:
QT4_WRAP_CPP( Generated_MOC_SRCS ${QEMMPM_MOC_HDRS} )

# --------------------------------------------------------------------
#-- Put the generated files into their own group for IDEs
IDE_SOURCE_PROPERTIES( "Generated" "${Generated_UI_HDRS}" "${Generated_MOC_SRCS};${Generated_RC_SRCS}")

# --------------------------------------------------------------------
# -- Finally set the Project Sources to include all the sources
SET (QEMMPM_PROJECT_SRCS 
    ${QEMMPM_SRCS}
    ${QEMMPM_HDRS}
    ${EMMPM_COMMON_QT_HDRS}
    ${EMMPM_COMMON_QT_SRCS}
    ${EMMPM_COMMON_HDRS}
    ${EMMPM_COMMON_SRCS}
    ${Encoder_SRCS}
    ${Encoder_HDRS}
    ${Generated_RC_SRCS} 
    ${Generated_UI_HDRS} 
    ${Generated_MOC_SRCS}
)


#-- Set up OS X Application Bundle properties
#-- This file have tools for OS X Bunlde creation and configuration
INCLUDE (${EMMPMGUI_SOURCE_DIR}/Resources/OSX_Tools/OSX_BundleTools.cmake)

IF(APPLE)
 SET(GUI_TYPE MACOSX_BUNDLE)
 ConfigureMacOSXBundlePlist(${PROJECT_NAME} ${EXE_DEBUG_EXTENSION} 
                            ${PROJECT_RESOURCES_DIR}/icons/icns/${PROJECT_NAME}.icns
                            ${EMMPMGUI_VERSION} )
ENDIF (APPLE)

IF(Q_WS_WIN)
    include_directories(${PROJECT_RESOURCES_DIR}/icons/ico)
    configure_file(${PROJECT_RESOURCES_DIR}/icons/ico/IconResource.rc.in ${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.rc)
    SET (${PROJECT_NAME}_PROJECT_SRCS ${${PROJECT_NAME}_PROJECT_SRCS} ${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.rc) 
    IDE_SOURCE_PROPERTIES ("EMMPM/ConfiguredFiles" "${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.rc" "")
	IDE_SOURCE_PROPERTIES( "EMMPM/Configured" "${EMMPMGUI_BINARY_DIR}/${PROJECT_PREFIX}/Common/${PROJECT_PREFIX}Version.h;${EMMPMGUI_BINARY_DIR}/${PROJECT_PREFIX}/Common/${PROJECT_PREFIX}Configuration.h" "${EMMPMGUI_BINARY_DIR}/${PROJECT_PREFIX}/Common/${PROJECT_PREFIX}Types.h")                
ENDIF(Q_WS_WIN)

# ---------- Build the Viewer Application  ----------------------
ADD_EXECUTABLE( ${PROJECT_NAME} ${GUI_TYPE} ${QEMMPM_PROJECT_SRCS} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
                        ${QT_LIBRARIES})

FindQtPlugins("qgif;qjpeg;qtiff")

InstallationSupport(${PROJECT_NAME} ${EXE_DEBUG_EXTENSION} ${QEMMPM_BINARY_DIR})                

