#///////////////////////////////////////////////////////////////////////////////
#
#  Copyright (c) 2010, Michael A. Jackson. BlueQuartz Software
#  All rights reserved.
#  BSD License: http://www.opensource.org/licenses/bsd-license.html
#
#///////////////////////////////////////////////////////////////////////////////
# set project's name
PROJECT( QEMMPM )
cmake_minimum_required(VERSION 2.6)


# ---------- Setup output Directories -------------------------
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all Libraries"
  )

# --------- Setup the Executable output Directory -------------
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all Executables."
  )

# --------- Setup the Executable output Directory -------------
SET (CMAKE_ARCHIVE_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/Bin
  CACHE PATH
  "Single Directory for all static libraries."
  )


# Set the GUI type for different platforms
SET(GUI_TYPE )

# Set some Win32 Specific Settings
IF(WIN32)
 SET(GUI_TYPE WIN32)
ENDIF(WIN32)

# Set some include directories
include_directories( ${TO79_SOURCE_DIR}/Source )
include_directories( ${TO79_SOURCE_DIR}/Source/MXA/Qt )
include_directories( ${QEMMPM_BINARY_DIR} )


# List the source files here
SET (QEMMPM_SRCS
    ${QEMMPM_SOURCE_DIR}/main.cpp
    ${QEMMPM_SOURCE_DIR}/QEmMpm.cpp
    ${QEMMPM_SOURCE_DIR}/EmMpmTask.cpp
)

SET (QEMMPM_HDRS
    ${QEMMPM_SOURCE_DIR}/QEmMpm.h
    ${QEMMPM_SOURCE_DIR}/EmMpmTask.h
)
IDE_SOURCE_PROPERTIES( "EMMPM/GUI" "${QEMMPM_HDRS}" "${QEMMPM_SRCS}")

set (EMMPM_COMMON_QT_SRCS
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ApplicationAboutBoxDialog.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/QRecentFileList.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/QFileCompleter.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/MXAImageGraphicsDelegate.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/QFSDroppableGraphicsView.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ProcessQueueDialog.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ProcessQueueController.cpp
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ProcessQueueTask.cpp
)
set (EMMPM_COMMON_QT_HDRS
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ApplicationAboutBoxDialog.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/QRecentFileList.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/QFileCompleter.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/MXAImageGraphicsDelegate.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/QFSDroppableGraphicsView.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ProcessQueueDialog.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ProcessQueueController.h
    ${TO79_SOURCE_DIR}/Source/MXA/Qt/ProcessQueueTask.h
)
IDE_SOURCE_PROPERTIES("EMMPM/Qt" "${EMMPM_COMMON_QT_HDRS}" "${EMMPM_COMMON_QT_SRCS}")

set (EMMPM_COMMON_SRCS
    ${TO79_SOURCE_DIR}/Source/AIM/Common/AIMImage.cpp
)
set (EMMPM_COMMON_HDRS
    ${TO79_SOURCE_DIR}/Source/AIM/Common/AIMArray.hpp
    ${TO79_SOURCE_DIR}/Source/AIM/Common/AIMImage.h   )
IDE_SOURCE_PROPERTIES("EMMPM/Common" "${EMMPM_COMMON_HDRS}" "${EMMPM_COMMON_SRCS}")


# --------------------------------------------------------------------
#  Get a list of the header to run 'moc' on 
# --------------------------------------------------------------------                   
SET( QEMMPM_MOC_HDRS
    ${QEMMPM_HDRS}
    ${EMMPM_COMMON_QT_HDRS}
)

# --------------------------------------------------------------------
# The UI files As generated by Qt Designer
# --------------------------------------------------------------------
SET( QEMMPM_UIS
  ${QEMMPM_SOURCE_DIR}/UI_Files/QEmMpm.ui
  ${TO79_SOURCE_DIR}/Source/MXA/Qt/UI_Files/ProcessQueueDialog.ui
  ${TO79_SOURCE_DIR}/Source/MXA/Qt/UI_Files/ApplicationAboutBoxDialog.ui

)

# and finally any resource files
SET( QEMMPM_RCS ${PROJECT_RESOURCES_DIR}/icons/images/Icons.qrc)

# --------------------------------------------------------------------
# Run MOC on the files   
QT4_ADD_RESOURCES( Generated_RC_SRCS ${QEMMPM_RCS} )

# --------------------------------------------------------------------
# this will run uic on .ui files:
QT4_WRAP_UI( Generated_UI_HDRS ${QEMMPM_UIS} )

# --------------------------------------------------------------------
# and finally this will run moc:
QT4_WRAP_CPP( Generated_MOC_SRCS ${QEMMPM_MOC_HDRS} )

# --------------------------------------------------------------------
#-- Put the generated files into their own group for IDEs
IDE_SOURCE_PROPERTIES( "Generated" "${Generated_UI_HDRS}" "${Generated_MOC_SRCS};${Generated_RC_SRCS}")

# --------------------------------------------------------------------
# -- Finally set the Project Sources to include all the sources
SET (QEMMPM_PROJECT_SRCS 
    ${QEMMPM_SRCS}
    ${QEMMPM_HDRS}
    ${EMMPM_COMMON_QT_HDRS}
    ${EMMPM_COMMON_QT_SRCS}
    ${EMMPM_COMMON_HDRS}
    ${EMMPM_COMMON_SRCS}
    ${Generated_RC_SRCS} 
    ${Generated_UI_HDRS} 
    ${Generated_MOC_SRCS}
)


#-- Set up OS X Application Bundle properties
#-- This file have tools for OS X Bunlde creation and configuration
INCLUDE (${PROJECT_RESOURCES_DIR}/OSX_Tools/OSX_BundleTools.cmake)

IF(APPLE)
 SET(GUI_TYPE MACOSX_BUNDLE)
 ConfigureMacOSXBundlePlist(${PROJECT_NAME} ${EXE_DEBUG_EXTENSION} 
                            ${PROJECT_RESOURCES_DIR}/icons/icns/${PROJECT_NAME}.icns
                            ${TO79_VERSION} )
ENDIF (APPLE)

IF(Q_WS_WIN)
    include_directories(${PROJECT_RESOURCES_DIR}/icons/ico)
    configure_file(${PROJECT_RESOURCES_DIR}/icons/ico/IconResource.rc.in ${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.rc)
    SET (${PROJECT_NAME}_PROJECT_SRCS ${${PROJECT_NAME}_PROJECT_SRCS} ${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.rc) 
    IDE_SOURCE_PROPERTIES ("EMMPM/ConfiguredFiles" "${${PROJECT_NAME}_BINARY_DIR}/${PROJECT_NAME}.rc" "")
	IDE_SOURCE_PROPERTIES( "EMMPM/Configured" "${TO79_BINARY_DIR}/${PROJECT_PREFIX}/Common/${PROJECT_PREFIX}Version.h;${TO79_BINARY_DIR}/${PROJECT_PREFIX}/Common/${PROJECT_PREFIX}Configuration.h" "${TO79_BINARY_DIR}/${PROJECT_PREFIX}/Common/${PROJECT_PREFIX}Types.h")                
ENDIF(Q_WS_WIN)

# ---------- Build the Viewer Application  ----------------------
ADD_EXECUTABLE( ${PROJECT_NAME} ${GUI_TYPE} ${QEMMPM_PROJECT_SRCS} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME}
                        ${QT_LIBRARIES})

FindQtPlugins("qgif;qjpeg;qtiff")

InstallationSupport(${PROJECT_NAME} ${EXE_DEBUG_EXTENSION} ${QEMMPM_BINARY_DIR})                

